<resources>
    <string name="app_name" translatable="false">YAWA</string>

    <string name="action_about_us">About us</string>

    <string name="credits_author_label">By:</string>
    <string name="credits_author1_name" translatable="false">Inês de Castro</string>
    <string name="credits_author2_name" translatable="false">Rafael Pereira</string>
    <string name="credits_author3_name" translatable="false">Renato Junior</string>

    <string name="credits_data_source_gitURL_authors1" translatable="false">https://github.com/inesgc</string>
    <string name="credits_data_source_gitURL_authors2" translatable="false">https://github.com/RafaelPereira94</string>
    <string name="credits_data_source_gitURL_authors3" translatable="false">https://github.com/rmellojunior</string>
    <string name="credits_data_source_open_weather" translatable="false">https://openweathermap.org/</string>

    <string name="api_base_uri" translatable="false">http://api.openweathermap.org/data/2.5</string>
    <string name="api_currentWeather_config_path" translatable="false">/weather?q</string>
    <string name="api_forecastWeather_config_path" translatable="false">/forecast/daily?q</string>
    <string name="api_key_name" translatable="false">appid</string>
    <string name="api_key_value" translatable="false">b22be6e0a4dffd64eeddad7f0ee8e175</string>
    <string name="api_query_units" translatable="false">units=metric</string>
    <string name="api_query_count" translatable="false">cnt=5</string>
    <string name="api_query_language">lang=eng</string>
    <string name="api_icon_uri" translatable="false">http://openweathermap.org/img/w/</string>
    <string name="api_icon_extension" translatable="false">.png</string>

    <string name="mainActivity_title">Yet Another Weather Application</string>
    <string name="mainActivity_currentWeatherButton">Current Weather</string>
    <string name="mainActivity_forecastButton">Forecast 5 days</string>
    <string name="mainActivity_creditsButton">Credits</string>
    <string name="mainActivity_insertCity">Please insert a city</string>

    <string name="activity_weather_temperatureLabel">Temperature:</string>
    <string name="activity_weather_pressureLabel">Pressure:</string>
    <string name="activity_weather_humidityLabel">Humidity:</string>
    <string name="activity_weather_windSpeedLabel">Wind Speed:</string>
    <string name="activity_weather_sunriseLabel">Sunrise:</string>
    <string name="activity_weather_sunsetLabel">Sunset:</string>
    <string name="activity_weather_cloudsLabel">Cloudiness:</string>
    <string name="activity_weather_rainLabel">Rain Volume:</string>
    <string name="activity_weather_snowLabel">Snow Volume:</string>
    <string name="activity_weather_tempMinLabel">Min temperature:</string>
    <string name="activity_weather_tempMaxLabel">Max temperature:</string>

    <string name="weather_noRain">no rain</string>
    <string name="weather_noSnow">no snow</string>
    <string name="weather_temperatureUnit" translatable="false">ºC</string>
    <string name="weather_pressureUnit" translatable="false">hpa</string>
    <string name="weather_humidityUnit" translatable="false">%</string>
    <string name="weather_rainUnit" translatable="false">mm</string>
    <string name="weather_snowUnit" translatable="false">mm</string>
    <string name="weather_windSpeedUnit">meter/sec</string>
    <string name="weather_cloudsUnit" translatable="false">%</string>
    <string name="noConnectivity_message">Cannot connect. Please make sure you have an internet connectivity.</string>

    <string-array name="shared_preference_refresh_array">
        <item>3</item>
        <item>6</item>
        <item>9</item>
        <item>12</item>
    </string-array>

    <string-array name="shared_preference_economic_mode_array">
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>

    <string-array name="shared_preference_notification_hour_array">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string name="shared_preference_favorite_city">Favorite City:</string>
    <string name="shared_preference_data_refresh" translatable="false">Refresh:</string>
    <string name="shared_preference_wifi" translatable="false">Wi-fi</string>
    <string name="shared_preference_notification">Notifications:</string>
    <string name="shared_preference_economic_mode">Economic Mode:</string>
    <string name="shared_preference_notification_hour">Notification hour:</string>

    <string name="shared_preference" translatable="false">shared_preferences</string>

    <string name="shared_preference_key_favorite_city" translatable="false">favorite_city</string>
    <string name="shared_preference_key_data_refresh" translatable="false">refresh</string>
    <string name="shared_preference_key_wi_fi" translatable="false">wi_fi</string>
    <string name="shared_preference_key_notification" translatable="false">notifications</string>
    <string name="shared_preference_key_economic_mode" translatable="false">economic_mode</string>
    <string name="shared_preference_key_notification_hour">Notification_hour</string>
    <string name="shared_preference_saveButton">Save</string>
    <string name="notification_title" translatable="false">Weather update</string>
    <string name="notification_text">New weather update:</string>

</resources>
