<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pdm.isel.pt.yawa.presentation.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:title="@string/app_name"
            tools:title="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:layout_weight="0.09"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            android:text="@string/mainActivity_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/insertCity"
            android:textAlignment="center"
            android:hint="@string/mainActivity_insertCity" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/currentWeather"
            android:layout_weight="0.09"
            android:text="@string/mainActivity_currentWeatherButton" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forecastWeather"
            android:layout_weight="0.09"
            android:text="@string/mainActivity_forecastButton" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/favoriteCityCurr"
            android:text="favorite city current weather" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/favoriteCityForec"
            android:text="favorite city forecast 5 days" />

    </LinearLayout>

</RelativeLayout>
