<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/shared_preference_favorite_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shared_preference_favorite_city"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/shared_preference_favorite_city_answer"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/shared_preference_data_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shared_preference_data_refresh"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shared_preference_data_refresh_answer"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:text="Wi-fi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shared_preference_wifi"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:text="@string/shared_preference_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shared_preference_notification"
            android:layout_weight="1" />

        <TextView
            android:text="@string/shared_preference_notification_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shared_preference_notification_hour"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shared_preference_notification_hour_answer"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shared_preference_economic_mode"
            android:layout_weight="1"
            android:text="@string/shared_preference_economic_mode" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shared_preference_economic_mode_answer"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:text="Save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shared_preference_saveButton" />
</LinearLayout>