<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weather_ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_credits"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="pdm.isel.pt.yawa.presentation.CreditsActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp">

                <TextView
                    android:text="@string/credits_author_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/author_label"
                    tools:text="@string/credits_author_label" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/credits_author1_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.56"
                        android:layout_gravity="center"
                        android:id="@+id/author1_name"
                        android:gravity="center" />

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        app:srcCompat="@drawable/git_ines"
                        android:id="@+id/author1_image"
                        android:layout_weight="0.56" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/credits_author2_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/author2_name"
                        android:layout_weight="0.87"
                        android:layout_gravity="center"
                        android:gravity="center" />

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        app:srcCompat="@drawable/git_rafael"
                        android:id="@+id/author2_image"
                        android:layout_weight="1"
                        android:layout_gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/credits_author3_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/author3_name"
                        android:layout_weight="0.88"
                        android:layout_gravity="center"
                        android:gravity="center" />

                    <ImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        app:srcCompat="@drawable/git_renato"
                        android:id="@+id/author3_image"
                        android:layout_weight="1"
                        android:layout_gravity="center" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                app:srcCompat="@drawable/open_weather_map_logo"
                android:id="@+id/open_weather_map_image"
                android:layout_margin="50dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
